test/files/neg/bug1010.check
bug1010.scala:14: error: type mismatch;
 found   : MailBox#Message
 required: _16.in.Message where val _16: Actor
   unstable.send(msg) // in.Message becomes unstable.Message, but that's ok since Message is a concrete type member
                 ^
one error found
